Fix makefile, alignment

--- a/srht/scss/icons.scss
+++ b/srht/scss/icons.scss
@@ -1,7 +1,7 @@
 .icon {
   display: inline-block;
   width: 0.5em;
-  vertical-align: -0.3em;
+  vertical-align: -0.35em;
   line-height: .75em;
   margin-left: 0.2rem;
   
